GNOME Bugzilla – Bug 723981
Using mouse wheel to rewind/fast-forward streaming video puts video in unplayable state
Last modified: 2014-02-11 12:44:19 UTC
Steps to reproduce: 1. Open Totem 2. Begin playback from a streaming video source over udp. 3. When playback begins, position mouse over video widget 4. Scroll the mouse wheel up or down Expected results: 1. Nothing should happen. The scrubber is disabled during playback of the video stream. Scrubbing with the mouse wheel should be disabled as well. Received results: When the mouse cursor is positioned over the video widget and I scroll the mouse wheel up or down, 1. playback stops. 2. The timer in the status bar displays Playing | 0:00 (Streaming). 3. I have to pause and unpause playback for totem to continue playing the stream again.
commit af87f39d303fe57318023c964597e1e7ea971cfc Author: Bastien Nocera <hadess@hadess.net> Date: Tue Feb 11 13:43:51 2014 +0100 main: Don't allow seeking with keys if not seekable https://bugzilla.gnome.org/show_bug.cgi?id=723981 commit 799938c81f33b8a5cc81d3874719030b52813ad7 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Feb 11 13:40:05 2014 +0100 backend: Don't allow seeking if not seekable https://bugzilla.gnome.org/show_bug.cgi?id=723981