backend: Don't allow seeking if not seekable

https://bugzilla.gnome.org/show_bug.cgi?id=723981